--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "pug": "^3.0.2",
     "sass": "^1.62.1",
     "vee-validate": "^4.8.6",
     "vue": "^3.2.47",
     "vue-unique-id": "^3.2.1",
-    "vue-uuid": "^3.0.0"
+    "vue-uuid": "^3.0.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
