--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.62.1",
     "vee-validate": "^4.8.6",
     "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
     "vue-unique-id": "^3.2.1",
     "vue-uuid": "^3.0.0",
     "vuedraggable": "^4.1.0"
